fixed scrollbar on 100% height

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   text-align: center;
   height: 100%;
   box-sizing: border-box;
+  overflow: hidden;
 }
 
 .App-logo {
