--- a/src/Components/PhotoPage/PhotoPage.css
+++ b/src/Components/PhotoPage/PhotoPage.css
@@ -6,11 +6,11 @@
 } */
 
 button.arrow{
-    position: fixed;
+    position: absolute;
     background-color: rgba(0, 0, 0, 0.438);
     padding: 20px;
     font: bold 2.5rem 'segoe';
-    top: 45%;
+    top: 60%;
 }
 
 .photo-day{
