--- a/src/index.css
+++ b/src/index.css
@@ -1,23 +1,24 @@
 body {
   margin: 0;
+  padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100%;
-  box-sizing: border-box;
+  height: 100vh;
 }
 
 html{
   height: 100%;
   margin: 0;
-  box-sizing: border-box;
+  padding: 0;
 }
 
 #root{
   height: 100%;
   margin: 0;
+  padding: 0;
 }
 
 code {
